--- a/lesson_20/index.html
+++ b/lesson_20/index.html
@@ -94,12 +94,12 @@
 							<h2 class="wwd__title">We Create Custom Jewels.</h2>
 						</div>
 						<div class="left-side__picture">
-							<img src="img/left-side.png" alt="Jewels">
+							<img src="img/left-side.webp" alt="Jewels">
 						</div>
 					</div>
 					<div class="section-3__right-side right-side">
 						<div class="right-side__picture">
-							<img src="img/r-side.png" alt="Jewels">
+							<img src="img/r-side.webp" alt="Jewels">
 						</div>
 						<p class="right-side__descr">
 							Lorem ipsum dolor sit amet, conse elit, sedid do eiusmod tempor incidi ut labore et dolore magna
@@ -119,38 +119,137 @@
 					<div class="section-4__cards cards-section-4">
 						<div class="cards-section-4__product product">
 							<div class="product__pic">
-								<img src="img/product1.png" alt="carrings">
+								<img src="img/product1.webp" alt="carrings">
 							</div>
 							<div class="product__descr">
-								<h3 class="product__name">Embossed hoop earrings</h3>
+								<a href="#" class="product__name">Embossed hoop earrings</a>
 								<div class="product__price">$144.00</div>
 							</div>
 						</div>
 						<div class="cards-section-4__product product">
 							<div class="product__pic">
-								<img src="img/product2.png" alt="carrings">
+								<img src="img/product2.webp" alt="carrings">
 							</div>
 							<div class="product__descr">
-								<h3 class="product__name">Embossed hoop earrings</h3>
+								<a href="#" class="product__name">Embossed hoop earrings</a>
 								<div class="product__price">$144.00</div>
 							</div>
 						</div>
 						<div class="cards-section-4__product product">
 							<div class="product__pic">
-								<img src="img/product3.png" alt="carrings">
+								<img src="img/product3.webp" alt="carrings">
 							</div>
 							<div class="product__descr">
-								<h3 class="product__name">Embossed hoop earrings</h3>
+								<a href="#" class="product__name">Embossed hoop earrings</a>
 								<div class="product__price">$144.00</div>
 							</div>
 						</div>
 						<div class="cards-section-4__product product">
 							<div class="product__pic">
-								<img src="img/product4.png" alt="carrings">
+								<img src="img/product4.webp" alt="carrings">
 							</div>
 							<div class="product__descr">
-								<h3 class="product__name">Embossed hoop earrings</h3>
+								<a href="#" class="product__name">Embossed hoop earrings</a>
 								<div class="product__price">$144.00</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="page__section-5 section-5">
+				<div class="section-5__container">
+					<div class="section-5__text text">
+						<div class="text__wwd wwd">
+							<span class="wwd__pretitle">WHAT WE DO</span>
+							<h2 class="wwd__title">HANDCRAFTED& <br> ETHICALLY SOURCED</h2>
+						</div>
+					</div>
+					<div class="section-5__cards-hendcrafted hendcrafted-cards">
+						<div class="hendcrafted-card hendcrafted-card--01">
+							<img class="hendcrafted-card__pic" src="img/hendcrafted1.webp" alt="Jewels">
+							<p class="hendcrafted-card__descr">
+								Nullam quis ante. Pellentesque libero tortor, tincidunt et, tinciduntamet
+							</p>
+						</div>
+						<div class="hendcrafted-card hendcrafted-card--02">
+							<img class="hendcrafted-card__pic" src="img/hendcrafted2.webp" alt="Jewels">
+							<p class="hendcrafted-card__descr">
+								libero tortor, tincidunt et, tinciduntamet est.In hac habitasse
+							</p>
+						</div>
+						<div class="hendcrafted-card hendcrafted-card--03">
+							<img class="hendcrafted-card__pic" src="img/hendcrafted3.webp" alt="Jewels">
+							<p class="hendcrafted-card__descr">
+								Pellentesque libero tortor, tincidunt et, tinciduntamet est.In hac habitasse
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="page__section-6 section-6">
+				<div class="section-6__container">
+					<div class="section-6__title title">
+						<h2 class="title__item">
+							Ours Popular Products
+						</h2>
+						<h2 class="title__sub-item">Best Seller Product This Week!</h2>
+					</div>
+					<div class="section-6__content content">
+						<div class="content__card-item card-item">
+							<div class="card-item__pic">
+								<img src="img/section6-01.webp" alt="Jewels">
+							</div>
+							<div class="card-item__info info">
+								<h2 class="info__name">
+									Engagement Rings – a Buyer’s Guide
+								</h2>
+								<div class="info__middle">
+									<div class="info__date">
+										Dec 2, 2020
+									</div>
+									<div class="info__min-read">
+										8 min read
+									</div>
+								</div>
+								<a href="#" class="info__read-more">Read More</a>
+							</div>
+						</div>
+						<div class="content__card-item card-item">
+							<div class="card-item__pic">
+								<img src="img/section6-02.webp" alt="Jewels">
+							</div>
+							<div class="card-item__info info">
+								<h2 class="info__name">
+									Comment connaître sa taille de doigts ?
+								</h2>
+								<div class="info__middle">
+									<div class="info__date">
+										Dec 2, 2020
+									</div>
+									<div class="info__min-read">
+										8 min read
+									</div>
+								</div>
+								<a href="#" class="info__read-more">Read More</a>
+							</div>
+						</div>
+						<div class="content__card-item card-item">
+							<div class="card-item__pic">
+								<img src="img/section6-03.webp" alt="Jewels">
+							</div>
+							<div class="card-item__info info">
+								<h2 class="info__name">
+									Engagement Rings – a Buyer’s Guide
+								</h2>
+								<div class="info__middle">
+									<div class="info__date">
+										Dec 2, 2020
+									</div>
+									<div class="info__min-read">
+										8 min read
+									</div>
+								</div>
+								<a href="#" class="info__read-more">Read More</a>
 							</div>
 						</div>
 					</div>
@@ -159,7 +258,31 @@
 		</main>
 
 		<footer class="footer">
-
+			<div class="footer__container">
+				<div class="footer__contacts contacts">
+					<div class="contacts__phone">(+480) 70 567-8899</div>
+					<div class="contacts__mail">support@pretty stonese.com</div>
+					<div class="contacts__adress">
+						jewelry – 85 lake view drive marshfield, new york, 54449
+					</div>
+					<div class="contacts__socials">
+						<a href="#" class="contacts__link">
+							<img src="img/fb.svg" alt="fb">
+						</a>
+						<a href="#" class="contacts__link">
+							<img src="img/x.svg" alt="X">
+						</a>
+						<a href="#" class="contacts__link">
+							<img src="img/insta.svg" alt="Insta">
+						</a>
+					</div>
+				</div>
+				<div class="footer__links links-footer">
+					<a href="" class="links-footer__item">About</a>
+					<a href="" class="links-footer__item">Store location</a>
+					<a href="" class="links-footer__item">Contact</a>
+				</div>
+			</div>
 		</footer>
 	</div>
 </body>
