--- a/lesson_21/index.html
+++ b/lesson_21/index.html
@@ -35,7 +35,7 @@
 						</ul>
 					</div>
 				</nav>
-				<form class="header__search-form form" action="" method="GET">
+				<form class="header__search-form form" action="#" method="GET">
 					<!-- <button type="submit" class="form__pic"><img src="img/header/search.svg" alt="search"></button> -->
 					<input class="form__input" autocomplete="off" name="search" placeholder="Search" type="search">
 				</form>
@@ -64,7 +64,7 @@
 			</section>
 			<section class="page__style style">
 				<div class="style__container">
-					<arricle class="style__card card-style">
+					<article class="style__card card-style">
 						<img src="img/style/card1.png" alt="High Coziness">
 						<strong class="card-style__pretitle">Low Price</strong>
 						<h2 class="card-style__title">High Coziness</h2>
@@ -74,8 +74,8 @@
 						<a href="#" class="card-style__explore">
 							Explore Items
 						</a>
-					</arricle>
-					<arricle class="style__card card-style">
+					</article>
+					<article class="style__card card-style">
 						<img src="img/style/card2.png" alt="Breezy Summer
 						Style">
 						<strong class="card-style__pretitle">Beyoung Presents</strong>
@@ -87,7 +87,7 @@
 						<a href="#" class="card-style__explore">
 							Explore Items
 						</a>
-					</arricle>
+					</article>
 				</div>
 			</section>
 			<section class="page__arrival arrival">
@@ -95,36 +95,44 @@
 					<h2 class="title title--margin">New Arrival</h2>
 					<div class="arrival__items items">
 						<article class="items__item">
-							<figure>
-								<a href="#" class="items__link">
+							<a href="#" class="items__link">
+								<figure>
 									<img src="img/arrival/section2-pic1.webp" alt="Knitted Joggers">
-									<figcaption>Knitted Joggers</figcaption>
-								</a>
-							</figure>
+									<figcaption>
+										<h3 class="items__name">Knitted Joggers</h3>
+									</figcaption>
+								</figure>
+							</a>
 						</article>
 						<article class="items__item">
-							<figure>
-								<a href="#" class="items__link">
+							<a href="#" class="items__link">
+								<figure>
 									<img src="img/arrival/section2-pic2.webp" alt="Full Sleeve">
-									<figcaption>Full Sleeve</figcaption>
-								</a>
-							</figure>
+									<figcaption>
+										<h3 class="items__name">Full Sleeve</h3>
+									</figcaption>
+								</figure>
+							</a>
 						</article>
 						<article class="items__item">
-							<figure>
-								<a href="#" class="items__link">
+							<a href="#" class="items__link">
+								<figure>
 									<img src="img/arrival/section2-pic3.webp" alt="Active T-Shirts">
-									<figcaption>Active T-Shirts</figcaption>
-								</a>
-							</figure>
+									<figcaption>
+										<h3 class="items__name">Active T-Shirts</h3>
+									</figcaption>
+								</figure>
+							</a>
 						</article>
 						<article class="items__item">
-							<figure>
-								<a href="#" class="items__link">
+							<a href="#" class="items__link">
+								<figure>
 									<img src="img/arrival/section2-pic4.webp" alt="Urban Shirts">
-									<figcaption>Urban Shirts</figcaption>
-								</a>
-							</figure>
+									<figcaption>
+										<h3 class="items__name">Urban Shirts</h3>
+									</figcaption>
+								</figure>
+							</a>
 						</article>
 					</div>
 				</div>
